# CHILL_SPACE_v3

./: .gitignore  README.md  frontend.env.example  netlify.toml  package-lock.json  package.json
Docs/: AI_ENGINEER_ROADMAP.md  CODE_EDITOR.md  MONACO_EDITOR_GUIDE.md  RUST_BACKEND.md  hlp.txt
Docs/Games/Snake_Game/: CLIENT_PREDICTION.md  MECHANICS.md  ROOMS.md  SNAKE_OVERVIEW.md  SOLO_MODE.md  WEBSOCKET.md
Frontend/: next.config.ts  package-lock.json  package.json
Frontend/public/: manifest.json
Frontend/reference/Future_Plans/: 01_RUST_BACKEND_SETUP.md  02_WEBSOCKET_REALTIME.md  03_CRDT_COLLABORATION.md  04_CODE_EDITOR.md  08_FOCUS_MODE.md
Frontend/src/app/: globals.css  layout.tsx  page.tsx
Frontend/src/components/: ComingSoon.tsx  ScrollProgressBar.tsx
Frontend/src/hooks/: useChat.ts
Mobile/: App.tsx  package-lock.json  package.json
backend/: .env  Cargo.toml  Dockerfile  README.md
backend/src/: code_runner.rs  config.rs  error.rs  game_state.rs  main.rs  metrics.rs  middleware.rs  routes.rs
backend/src/code_runner/: runner.rs
backend/src/games/: galaxy_match.rs  mod.rs  snake.rs
reference/: best_desgin.html  chat_preview.html  chat_structure_v2.html  code.html  newhome.html  project.html
reference/Future_Plans/: 00_MASTER_ROADMAP.md  05_SHARED_CANVAS.md  06_CODE_EXECUTION.md  07_AI_STUDY_BUDDY.md  09_VOICE_VIDEO.md
scripts/: seed-channels.js
src/app/: globals.css  layout.tsx  page.tsx
src/context/: FocusContext.tsx  RecentActivityContext.tsx
src/hooks/: useChat.ts  useFiles.ts
src/types/: supabase.ts
src/utils/: fileUtils.ts
(+106 files in other folders)
