[package]
name = "chill-space-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-web-actors = "4"
actix = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"
time = "=0.3.36" 
dotenv = "0.15"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
